--- a/Datathon/html/exp.html
+++ b/Datathon/html/exp.html
@@ -13,8 +13,8 @@
         <nav class="navbar">
             <div class="logo">Explicaciones</div>
             <ul class="nav-links">
-                <li><a href="main.html">Home</a></li>
-                <li><a href="main.html">About</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/index.html">About</a></li>
                 
                 <li><a href="main.html">Contact</a></li>
             </ul>
