changed index location

--- a/Datathon/html/index.html
+++ b/Datathon/html/index.html
@@ -15,7 +15,7 @@
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="/html/exp.html">Explicaciones</a></li>
+                <li><a href="exp.html">Explicaciones</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -39,7 +39,7 @@
         </section>
         <section id="test" class="section">
             <h2>Prueba de prueba de conocimientos</h2>
-            <a href="/html/test1.html">Prueba ahora</a>
+            <a href="test1.html">Prueba ahora</a>
         </section>
     </main>
 
