--- a/Datathon/html/exp.html
+++ b/Datathon/html/exp.html
@@ -13,10 +13,10 @@
         <nav class="navbar">
             <div class="logo">Explicaciones</div>
             <ul class="nav-links">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/index.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">About</a></li>
                 
-                <li><a href="main.html">Contact</a></li>
+                <li><a href="index.html">Contact</a></li>
             </ul>
         </nav>
     </header>
