--- a/Datathon/html/index.html
+++ b/Datathon/html/index.html
@@ -14,7 +14,7 @@
             <div class="logo">Algo nombre</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="#about">About us</a></li>
                 <li><a href="exp.html">Explicaciones</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
