--- a/Datathon/html/test1.html
+++ b/Datathon/html/test1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test1</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <h1>Titulo</h1>
@@ -42,6 +42,6 @@
 
     <p class="result" id="result"></p>
 
-    <script src="/js/scripts.js"></script>
+    <script src="../js/scripts.js"></script>
 </body>
 </html>
