--- a/Datathon/index.html
+++ b/Datathon/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Vuelo Directo">
     <title>Main</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
@@ -39,7 +39,7 @@
         </section>
         <section id="test" class="section">
             <h2>Prueba de prueba de conocimientos</h2>
-            <a href="test1.html">Prueba ahora</a>
+            <a href="/html/test1.html">Prueba ahora</a>
         </section>
     </main>
 
