--- a/Datathon/index.html
+++ b/Datathon/index.html
@@ -15,7 +15,7 @@
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About us</a></li>
-                <li><a href="exp.html">Explicaciones</a></li>
+                <li><a href="/html/exp.html">Explicaciones</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
