--- a/Datathon/index.html
+++ b/Datathon/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Vuelo Directo">
-    <title>Law Course Overview</title>
+    <title>placeholder</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="script" href="./js/scripts.js">
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="logo">VD</div>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#overview">Course Overview</a></li>
+                <li><a href="#home">Principal</a></li>
                 <li><a href="/html/test1.html">Tests</a></li>
                 <li><a href="/html/exp.html">Explicacion (idk temp)</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -25,14 +25,14 @@
     <main>
         <section id="home" class="hero">
             <h1>Welcome to placeholder</h1>
-            <p>Blablabla q no te estafen.</p>
+            <p>Tu primer trabajo no debería ser una sorpresa.</p>
                 
         </section>
 
             
         <section id="course-format" class="section">
             <h2>Explicacion corta</h2>
-            <p>This course is available in both online and on-campus formats to accommodate a variety of learning preferences.</p>
+            <p>Blablablabla</p>
             <ul>
                 <li>Duration: 12 weeks, with flexible scheduling options.</li>
                 <li>Format: Weekly live lectures, recorded sessions, and interactive discussions.</li>
@@ -71,11 +71,11 @@
             <p>Si tienes alguna duda pregunta</p>
             <p>Email: contacto@datathon.es</p>
             <p>Phone: +34 123 456 789</p>
-            <form action="submit_form_url" method="post">
+            <form>
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your Email" required>
                 <textarea name="message" placeholder="Your Message" required></textarea>
-                <button type="submit">Send Message</button>
+                <button type="submit" onclick="submitForm()">Send Message</button>
             </form>
         </section>
     </main>
