--- a/Datathon/html/exp.html
+++ b/Datathon/html/exp.html
@@ -11,12 +11,12 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo">Explicaciones</div>
+            <div class="logo">VD</div>
             <ul class="nav-links">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../index.html">About</a></li>
-                
-                <li><a href="../index.html">Contact</a></li>
+                <li><a href="../index.html">Principal</a></li>                
+                <li><a href="/html/test1.html">Tests</a></li>
+                <li><a href="../index.html#contact">Contact</a></li>
+
             </ul>
         </nav>
 
