--- a/Datathon/html/exp.html
+++ b/Datathon/html/exp.html
@@ -15,6 +15,7 @@
             <ul class="nav-links">
                 <li><a href="../index.html">Principal</a></li>                
                 <li><a href="/html/test1.html">Tests</a></li>
+                <li><a href="/html/faq.html">Tests</a></li>
                 <li><a href="../index.html#contact">Contact</a></li>
 
             </ul>
