footer and tests

--- a/Datathon/html/faq.html
+++ b/Datathon/html/faq.html
@@ -13,9 +13,8 @@
             <div class="logo">VD</div>
             <ul class="nav-links">
                 <li><a href="../index.html">Principal</a></li>
-                <li><a href="/html/test1.html">Tests</a></li>
-                <li><a href="/html/exp.html">Explicacion (idk temp)</a></li>
-                
+                <li><a href="/html/menutest.html">Tests</a></li>
+                <li><a href="/html/exp.html">Explicacion (idk temp)</a></li>                
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
