--- a/Datathon/html/exp.html
+++ b/Datathon/html/exp.html
@@ -14,7 +14,7 @@
             <div class="logo">VD</div>
             <ul class="nav-links">
                 <li><a href="../index.html">Principal</a></li>                
-                <li><a href="/html/test1.html">Tests</a></li>
+                <li><a href="/html/menutest.html">Tests</a></li>
                 <li><a href="/html/faq.html">FAQ</a></li>
                 <li><a href="../index.html#contact">Contact</a></li>
 
