--- a/Datathon/html/faq.html
+++ b/Datathon/html/faq.html
@@ -14,7 +14,7 @@
             <ul class="nav-links">
                 <li><a href="../index.html">Principal</a></li>
                 <li><a href="/html/menutest.html">Tests</a></li>
-                <li><a href="/html/exp.html">Explicacion (idk temp)</a></li>                
+                <li><a href="/html/exp.html">Recursos</a></li>                
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
