--- a/Datathon/html/menutest.html
+++ b/Datathon/html/menutest.html
@@ -14,7 +14,7 @@
             <div class="logo">VD</div>
             <ul class="nav-links">
                 <li><a href="../index.html">Principal</a></li>
-                <li><a href="/html/exp.html">Explicacion</a></li>
+                <li><a href="/html/exp.html">Recursos</a></li>
                 <li><a href="/html/faq.html">Faq</a></li>
                 <li><a href="../index.html#contact">Contact</a></li>
             </ul>
