--- a/Datathon/html/exp.html
+++ b/Datathon/html/exp.html
@@ -23,5 +23,9 @@
 
     </header>
     <div style="width: 100%;"><div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe title="Proyecto Final Educación Superior Estructurado" frameborder="0" width="1200px" height="675px" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://view.genially.com/6733b664c81633c782eb95cb" type="text/html" allowscriptaccess="always" allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div> </div>
-    </body>
+    <footer>
+        <p><a href="../html/faq.html">Preguntas Frecuentes</a></p> <!-- Link to FAQ page -->
+        <p>&copy; Vuelo Directo Datathon 2024</p>
+    </footer>
+</body>
     </html>
