--- a/Datathon/html/faq.html
+++ b/Datathon/html/faq.html
@@ -10,7 +10,7 @@
 
     <header>
         <nav class="navbar">
-            <div class="logo">VD</div>
+            <div class="logo">FL</div>
             <ul class="nav-links">
                 <li><a href="../index.html">Principal</a></li>
                 <li><a href="/html/menutest.html">Tests</a></li>
