--- a/Datathon/index.html
+++ b/Datathon/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Vuelo Directo">
-    <title>placeholder</title>
+    <title>Futuro Legal</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="script" href="./js/scripts.js">
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo">VD</div>
+            <div class="logo">FL</div>
             <ul class="nav-links">
                 <li><a href="#home">Principal</a></li>
                 <li><a href="/html/menutest.html">Tests</a></li>
@@ -25,7 +25,7 @@
 
     <main>
         <section id="home" class="hero">
-            <h1>Proyecto Piloto</h1>
+            <h1>Futuro Legal</h1>
             <p>Tu primer trabajo no debería ser una sorpresa.</p>
                 
         </section>
