--- a/Datathon/html/exp.html
+++ b/Datathon/html/exp.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo">VD</div>
+            <div class="logo">FL</div>
             <ul class="nav-links">
                 <li><a href="../index.html">Principal</a></li>                
                 <li><a href="/html/menutest.html">Tests</a></li>
