--- a/Datathon/index.html
+++ b/Datathon/index.html
@@ -34,10 +34,9 @@
         <section id="course-format" class="section">
             <h2>¡Transforma tu futuro con el conocimiento legal!
             </h2>
-            <p>¿Sabías que muchos estudiantes universitarios enfrentan situaciones laborales o educativas sin conocer sus derechos y procedimientos legales? Este desconocimiento genera frustración y una desconexión con el sistema judicial, creando un círculo vicioso de desinformación que afecta a toda la sociedad. Pero no tiene que ser así.
-                Nuestro proyecto está diseñado para prevenir estos problemas y empoderar a los jóvenes a través de un aprendizaje inmersivo y accesible. El objetivo es que cada estudiante, independientemente de su carrera, adquiera las herramientas necesarias para comprender los procedimientos legales básicos que impactan su vida diaria, especialmente en el ámbito laboral y educativo. ¡La justicia comienza con el conocimiento!
-                </p>
-           
+            <p>¿Sabías que muchos estudiantes universitarios enfrentan situaciones laborales o educativas sin conocer sus derechos y procedimientos legales? Este desconocimiento genera frustración y una desconexión con el sistema judicial, creando un círculo vicioso de desinformación que afecta a toda la sociedad. <br><strong>Pero no tiene que ser así.</strong><br>
+                Nuestro proyecto está diseñado para prevenir estos problemas y empoderar a los jóvenes a través de un aprendizaje inmersivo y accesible. El objetivo es que cada estudiante, independientemente de su carrera, adquiera las herramientas necesarias para comprender los procedimientos legales básicos que impactan su vida diaria, especialmente en el ámbito laboral y educativo.<br> <strong>¡La justicia comienza con el conocimiento!</strong>
+                </p>           
         </section>
 
         <section id="que-ofrecemos">
